PRODDEV-475: Updated styles and fixed problems with styles on mobile

--- a/scss/paragraph_skins/teasers.scss
+++ b/scss/paragraph_skins/teasers.scss
@@ -10,7 +10,7 @@
 }
 
 .ps-teasers-openy-memberships-desktop-sidebar {
-  .field-prgf-title {
+  h2 {
     display: none;
   }
 }
@@ -77,15 +77,52 @@
   }
 }
 
-@media (max-width: 425px) {
-  .two-column {
-    .sidebar-region {
-      top: 70px;
-      .ps-sidebar_menu-openy-memberships-sidebar-menu {
-        ul {
-          flex-direction: column;
-          li {
-            width: 100%;
+@media (max-width: 768px) {
+  .openy_carnation {
+    .layout-container {
+      .viewport {
+        margin-top: 65px !important;
+        .two-column {
+          .sidebar-region {
+            top: 70px;
+          }
+        }
+      }
+    }
+  }
+
+  .rose_based_theme {
+    .layout-container {
+      .viewport {
+        margin-top: 0 !important;
+        padding-top: 65px;
+        .landing-content {
+          .two-column {
+            .sidebar-region {
+              top: 0 !important;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .layout-container {
+    .viewport {
+      margin-top: 64px;
+      .two-column {
+        .sidebar-region {
+          top: 70px;
+          margin: 0;
+
+          .ps-sidebar_menu-openy-memberships-sidebar-menu {
+            ul {
+              flex-direction: column;
+
+              li {
+                width: 100%;
+              }
+            }
           }
         }
       }
@@ -93,10 +130,64 @@
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1024px) {
+  .user-logged-in {
+    &.openy_carnation {
+      .layout-container {
+        .viewport {
+          .two-column {
+            .sidebar-region {
+              top: 117px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .openy_carnation {
+    .layout-container {
+      .viewport {
+        margin-top: 142px;
+        .container {
+          max-width: 100%;
+          padding: 0 15px !important;
+        }
+        .two-column {
+          .sidebar-region {
+            top: 78px !important;
+            .ps-teasers-openy-memberships-desktop-sidebar {
+              .field-prgf-title {
+                display: block;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .rose_based_theme {
+    .layout-container {
+      .viewport {
+        margin-top: 65px;
+        .two-column {
+          .sidebar-region {
+            position: absolute;
+            top: -65px !important;
+            .ps-teasers-openy-memberships-desktop-sidebar {
+              .field-prgf-title {
+                display: block;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
   .layout-container {
     .viewport {
-      margin-top: 65px;
       .container {
         width: 100%;
       }
@@ -107,7 +198,7 @@
         }
         .sidebar-region {
           position: fixed;
-          top: 70px;
+          top: 80px;
           z-index: 39;
           background-color: black;
           height: auto;
@@ -119,33 +210,30 @@
           }
 
           .ps-teasers-openy-memberships-desktop-sidebar {
-            .field-prgf-title {
+            h2 {
               display: block;
-
-              h2 {
-                font-family: $font-family-cachet;
-                font-size: 18px;
-                line-height: 27px;
-                text-transform: uppercase;
-                color: white;
-                background-color: black;
-                margin: 0;
-                padding: 19px 36px;
-                cursor: pointer;
-                text-align: left;
-                width: 100%;
+              font-family: $font-family-cachet;
+              font-size: 18px;
+              line-height: 27px;
+              text-transform: uppercase;
+              color: white;
+              background-color: black;
+              margin: 0;
+              padding: 19px 36px;
+              cursor: pointer;
+              text-align: left;
+              width: 100%;
+              &:before {
+                display: inline-block;
+                font: normal normal normal 14px/1 FontAwesome;
+                text-rendering: auto;
+                font-size: 17px;
+                content: "\f00a";
+                padding-right: 17px;
+              }
+              &.menu-open {
                 &:before {
-                  display: inline-block;
-                  font: normal normal normal 14px/1 FontAwesome;
-                  text-rendering: auto;
-                  font-size: 17px;
-                  content: "\f00a";
-                  padding-right: 17px;
-                }
-                &.menu-open {
-                  &:before {
-                    content: "\f00d";
-                  }
+                  content: "\f00d";
                 }
               }
             }
@@ -166,5 +254,67 @@
         }
       }
     }
+  }
+}
+
+@media (min-width: 769px) and (max-width: 991px) {
+  .rose_based_theme {
+    .layout-container {
+      .viewport {
+        .two-column {
+          .sidebar-region {
+            position: fixed;
+            top: 70px !important;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .openy_carnation {
+    .layout-container {
+      .viewport {
+        margin-top: 142px !important;
+      }
+    }
+  }
+
+  .rose_based_theme {
+    .layout-container {
+      .viewport {
+        .two-column {
+          .sidebar-region {
+            &.menu-open {
+              height: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 993px) and (max-width: 1024px) {
+  .layout-container {
+    .viewport {
+      .breadcrumb-container {
+        margin-top: 65px;
+      }
+      .landing-content {
+        .two-column {
+          .sidebar-region {
+            top: 162px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1025px) {
+  .wrapper-field-prgf-teaser-content {
+    display: block !important;
   }
 }
